--- a/index.qmd
+++ b/index.qmd
@@ -4,10 +4,12 @@ title: "Welcome to My Portfolio"
 
 About Me
 
-Hello! I'm Merlin Urbanski, a passionate researcher and aspiring data scientist with a deep interest in predictive analytics, spatial data, and statistical modeling. I am currently pursuing my Master’s in Methodology and Statistics for Behavioral, Biomedical, and Social Sciences at Utrecht University. 
+Hello! I'm Laura Jochim, currently pursuing my Master’s in Methodology and Statistics for Behavioral, Biomedical, and Social Sciences at Utrecht University. At the moment I specialize in Artificial Intelligence in the field of biomedicine and my interests extent to Bayesian inference, Deep learning, Causal Inference, and psychological Diagnostics.
 
-### What I Do
-- **Predictive Analytics**: Designing models to uncover insights and make accurate predictions from data.  
-- **Statistical Modeling**: Leveraging R and Python to develop robust statistical solutions for challenging problems.  
-- **Data Imputation**: Researching innovative ways to handle missing data and ensure model reliability.  
+
+
+### Current tasks
+- **Medical Imaging**: Creating synthetic CT scans based on MRI scans and evaluating the performance and uncertainty of the model. 
+- **Synthetic Data**: Creating synthetic tabular healthcare data using the neural network architecture GAN.   
+  
 
