--- a/index.qmd
+++ b/index.qmd
@@ -4,11 +4,11 @@ title: "Welcome to My Portfolio"
 
 About Me
 
-Hello! I'm Laura Jochim, currently pursuing my Master’s in Methodology and Statistics for Behavioral, Biomedical, and Social Sciences at Utrecht University. At the moment I specialize in Artificial Intelligence in the field of biomedicine and my interests extent to Bayesian inference, Deep learning, Causal Inference, and psychological Diagnostics.
+Hello! I'm Laura Jochim, currently pursuing my Master’s in Methodology and Statistics for Behavioral, Biomedical, and Social Sciences at Utrecht University. At the moment I specialize in Artificial Intelligence in the field of biomedicine and my interests extent to Bayesian Inference, Deep Learning, Causal Inference, and psychological Diagnostics.
 
 
 
-### Current tasks
+### Current working on
 - **Medical Imaging**: Creating synthetic CT scans based on MRI scans and evaluating the performance and uncertainty of the model. 
 - **Synthetic Data**: Creating synthetic tabular healthcare data using the neural network architecture GAN.   
   
